--- a/PumTestProject/packages.config
+++ b/PumTestProject/packages.config
@@ -4,4 +4,7 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.SelfHost" version="5.2.7" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
+  <package id="Unity" version="5.11.3" targetFramework="net461" />
+  <package id="Unity.WebAPI" version="5.4.0" targetFramework="net461" />
 </packages>
