--- a/PumTestProject/PumTestProject.csproj
+++ b/PumTestProject/PumTestProject.csproj
@@ -99,6 +99,7 @@
     <Compile Include="Model\Employee.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PumContext.cs" />
     <Compile Include="Services\EmployeeService.cs" />
     <Compile Include="Services\IEmployeeService.cs" />
     <Compile Include="Startup\ServerStarter.cs" />
