--- a/PumTestProject/packages.config
+++ b/PumTestProject/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Castle.Core" version="4.4.0" targetFramework="net461" />
   <package id="EntityFramework" version="6.4.0" targetFramework="net461" />
   <package id="EntityFramework6.Npgsql" version="3.2.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net461" />
@@ -7,6 +8,9 @@
   <package id="Microsoft.AspNet.WebApi.SelfHost" version="5.2.7" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net461" />
   <package id="Npgsql" version="4.0.2" targetFramework="net461" />
+  <package id="NSubstitute" version="4.2.1" targetFramework="net461" />
+  <package id="NUnit" version="3.12.0" targetFramework="net461" />
+  <package id="NUnit3TestAdapter" version="3.16.1" targetFramework="net461" developmentDependency="true" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.0" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
