--- a/PumTestProject/PumTestProject.csproj
+++ b/PumTestProject/PumTestProject.csproj
@@ -80,6 +80,7 @@
       <HintPath>..\packages\System.ValueTuple.4.5.0\lib\net461\System.ValueTuple.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.Web" />
     <Reference Include="System.Web.Http, Version=5.2.7.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.AspNet.WebApi.Core.5.2.7\lib\net45\System.Web.Http.dll</HintPath>
     </Reference>
@@ -119,6 +120,7 @@
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Model\Company.cs" />
     <Compile Include="Model\Employee.cs" />
+    <Compile Include="Model\User.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PumContext.cs" />
@@ -129,6 +131,9 @@
     <Compile Include="Startup\ServerStarter.cs" />
     <Compile Include="Tests\ControllersTests\CompanyControllerTests.cs" />
     <Compile Include="Tests\ServiceTests\CompanyServiceTest.cs" />
+    <Compile Include="Validators\BasicAuthenticationAttibute.cs" />
+    <Compile Include="Validators\UserFactory.cs" />
+    <Compile Include="Validators\UserValidate.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
