readme.md added.

--- a/PumTestProject/App.config
+++ b/PumTestProject/App.config
@@ -6,7 +6,7 @@
   </configSections>
   
     <connectionStrings>
-    <add name="Default" connectionString="server=localhost;port=5432;database=PumTestProject;user id=postgres;password=ksglmp" providerName="Npgsql" />
+    <add name="Default" connectionString="server=localhost;port=5432;database=PumTestProject;user id=pumtest;password=test" providerName="Npgsql" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
